--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3948,6 +3948,7 @@ input, select, textarea {
 /* Footer */
 
 	#footer {
+		text-align: center;
 		color: #717981;
 		display: -moz-flex;
 		display: -webkit-flex;
@@ -3982,6 +3983,7 @@ input, select, textarea {
 		}
 
 		#footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6 {
+			text-align: center;
 			color: #717981;
 		}
 
